idea/testData/checker/trivialHierarchyLoop.fir.kt
class A : <error descr="[OTHER_ERROR] Unknown (other) error">A</error>() {}

val x : Int = A()
